refactor(3d-reconstruction): 优化 3D 重建回调处理逻辑
- 移除了不必要的 ZIP 文件存储和 URL 更新
- 简化了模型记录的创建和更新逻辑
- 保留了单个文件的 SSE 消息发送
- 删除了冗余的 URL 更新操作